# gee_asset_manager_addon

./: .gitignore  404.html  CNAME  README.md  changelog.html  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: python-package.yml  readme-publish.yml
changelog/: index.html
docs/: 404.html  changelog.md  index.html  index.md  installation.md  license.md  sitemap.xml
docs/changelog/: index.html
docs/installation/: index.html
docs/license/: index.html
docs/proj/: ai_studio_code.md  quota.md
docs/projects/: access.md  app2script.md  cancel_tasks.md  copy.md  delete.md  delete_metadata.md  move.md  projects.md  projects_enabled.md  quota.md  report.md  search.md  size.md  task_status.md
docs/search/: search_index.json
docs/stylesheets/: extra.css
geeadd/: __init__.py  acl_changer.py  app2script.py  assetsizes.py  batch_copy.py  batch_delete.py  batch_mover.py  batch_remover.py  batch_uploader.py  cleanup.py  collectionprop.py  collsizes.py  color_brewer.py  concurrent_ee_assets.py  ee_asset_info.py  ee_del_meta.py  ee_ls.py  ee_projects.py  ee_projects_dash.py  ee_report.py  failed_upload.csv  geeadd.py  palettes.json  search_fast.py  tabup.py  taskrep.py  taskreport.py
geeaddon/: __init__.py  ee_auth.py  ee_ls.py  geeadd.py  ogr2ft.py  query.py
installation/: index.html
license/: index.html
projects/access/: index.html
projects/app2script/: index.html
projects/cancel_tasks/: index.html
projects/copy/: index.html
projects/delete/: index.html
projects/delete_metadata/: index.html
projects/move/: index.html
projects/projects/: index.html
projects/quota/: index.html
projects/report/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_app2script.py  test_batch_copy.py  test_batch_delete.py  test_batch_mover.py  test_color_brewer.py  test_ee_asset_info.py  test_ee_projects.py  test_geeadd.py
(+17 files in other folders)
